--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,4 +1,5 @@
-@import './bulma_v0.9.3/bulma.sass';
+// @import './bulma_v0.9.3/bulma.sass';
+@import './bulma_v0.9.3_scss/bulma.scss';
 @import './bulma-extensions.min.css';
 @import './bulma-checkradio.min.css';
 @import './bulma-tooltip.min.css';
@@ -31,6 +32,10 @@ body {
 	font-family: 'HG行書体', 'HGP行書体', 'HGS行書体', 'HGP教科書体', 'Script',
 		'ＭＳ 明朝', serif;
 }
+
+.t-s {text-shadow: 1px 2px 3px #808080; }
+
+.wf-notosansjapanese { font-family: "Noto Sans JP"; }
 
 .overlay {
 	position: fixed;
