--- a/app/components/N/index_matchMedia.html
+++ b/app/components/N/index_matchMedia.html
@@ -358,7 +358,7 @@
 
 		<script>
 			document.addEventListener('DOMContentLoaded', function () {
-				// @media screen and (max-width: 780px) と同じ
+				// @media screen and (max-width: 1023px) と同じ 780px
 				let mql = window.matchMedia('screen and (max-width: 1023px)')
 				const ms2 = document.querySelector('.ms2')
 				const ms5 = document.querySelector('.ms5')
