--- a/app/components/N/Nreact.css
+++ b/app/components/N/Nreact.css
@@ -2,3 +2,14 @@
   display: flex;
   align-items: center;
 }
+
+.alignItems {
+  display: flex;
+  align-items: center;
+}
+
+.alignItems2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
