--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -8,6 +8,10 @@
 // @import '../../node_modules/bulma-extensions/bulma-tagsinput/dist/css/bulma-tagsinput.min.css';
 // @import '../../node_modules/bulma-extensions/bulma-badge/dist/css/bulma-badge.min.css';
 
+#myCanvas {
+  border-radius: 7px;
+}
+
 .sidebar-left {
 	background-color: #c8c8e5;
 	color: white;
